# promptset-audit

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: prompts.jsonl
src/promptset_audit/: __init__.py  audit.py  cli.py
tests/: test_audit.py
