[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "promptset-audit"
version = "0.1.0"
description = "Audit and split JSONL prompt datasets for image-generation experiments."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Edem Kebaili" }]
keywords = ["image-generation", "dataset", "prompts", "jsonl", "huggingface"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
promptset-audit = "promptset_audit.cli:main"

[project.urls]
Homepage = "https://github.com/Edemckb/promptset-audit"
Issues = "https://github.com/Edemckb/promptset-audit/issues"

[tool.setuptools.packages.find]
where = ["src"]

